# CampusX_Deeplearning

./: README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
1_ANN/: 1_ANN.md  2_IMPROVING_ANN.md  3_OPTIMIZATION_ALGORITHMS.md  backprop_animation.html
2_RNN/: 1_RNN.md  2_LSTM.md  LSTM_Basics.ipynb  RNN_Basics.ipynb
3_SEQ_TO_SEQ/: 1_ENCODER_DECODER.md  2_TRANSFER_LEARNING_BASICS.md  3_ATTENTION.md  4_TRANSFORMER.md
